--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,19 +3,19 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --radius: 0.75rem;
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+html,
+body,
+:root {
+  height: 100%;
 }
-
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  @apply bg-background text-foreground transition-colors;
+}
+.dark body {
+  @apply bg-background-dark text-foreground-dark;
+}
+.card {
+  @apply rounded-2xl border border-border shadow-sm;
 }
